[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plumber"
version = "1.8.dev0"
description = "An alternative to mixin-based extension of classes."
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Node Contributors", email = "dev@conestack.org"}]
keywords = ["class", "extension", "mixin", "alternative"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
test = [
    "zope.interface",
]

[project.urls]
Homepage = "http://github.com/conestack/plumber"

[tool.hatch.build.targets.wheel]
packages = ["src/plumber"]

[tool.zest-releaser]
create-wheel = true

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
